# deltares

./: .pre-commit-config.yaml  CHANGELOG.md  Makefile  README-template.md  README.md  docker_env  environment.yml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
examples/: availability-collection.json  collection.json  item.json  pc-availability-collection.json  pc-collection.json  pc-floods-collection.json
scripts/: test
src/azure/: docker-compose.yml  etl.py  test_etl.py
src/stactools/deltares/: __init__.py  commands.py  constants.py  stac.py
src/stactools/deltares/availability/: __init__.py  commands.py  stac.py
src/stactools/ephemeral/: stac.py
tests/: test_commands.py  test_module.py  test_stac.py
tests/availability/: test_stac.py
