[metadata]
name = stactools-deltares
version = attr: stactools.deltares.__version__
description = PROVIDE DESCRIPTION HERE
long_description = file: README.md
long_description_content_type = text/markdown
author = stac-utils
author_email = stac@radiant.earth
url = https://github.com/stactools-packages/deltares
project_urls =
    Issues = https://github.com/stactools-packages/deltares/issues
keywords =
    stactools
    pystac
    catalog
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools >= 0.3.1
    xstac @ git+https://github.com/TomAugspurger/xstac
    kerchunk
    requests
    xarray
    shapely
    fsspec
    h5netcdf

[options.packages.find]
where = src

[flake8]
exclude = tests/data,docs,benchmarks,scripts,.tox,env,.eggs,build
max-line-length = 88
ignore =
    # Assigning lambda expression
    E731
    # Ambiguous variable names
    E741
    # line break before binary operator
    W503
    # whitespace before :
    E203
